--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>My Special Message for Respected Siddhi MAM</h1>
+            <h1>My Special Message for Respected Sameekshu MAM</h1>
         </header>
         <main>
             <button id="generate-message">Click Here</button>
